--- a/platformio.ini
+++ b/platformio.ini
@@ -20,5 +20,6 @@ lib_deps =
 	adafruit/DHT sensor library@^1.4.4
 	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
 	ottowinter/ESPAsyncTCP-esphome@^1.2.3
+	arduino-libraries/NTPClient@^3.2.1
 monitor_speed = 115200
 upload_speed = 115200
